tests/runAsGroup/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-group-allowed
  labels:
    app: nginx-users
spec:
  securityContext:
    runAsGroup: 150
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsGroup: 150
