tests/runAsGroup/disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-group-disallowed
  labels:
    app: nginx-users
spec:
  securityContext:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsUser: 250
