tests/runAsGroup/kubewarden.yaml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: runasgroup
spec:
  policyServer: default
  module: registry://ghcr.io/kubewarden/policies/user-group-psp:v1.1.5
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    operations:
    - CREATE
    - UPDATE
  mutating: false
  settings:
    run_as_group: 
      rule: "MustRunAs"
      ranges:
        - min: 100
          max: 200
    run_as_user: 
      rule: "RunAsAny"
    supplemental_groups: 
      rule: "RunAsAny"
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kubewarden
